--- a/resume.html
+++ b/resume.html
@@ -1096,13 +1096,13 @@
         </ul>
       </nav>
       <section class="col-md-3 card-wrapper profile-card-wrapper affix">
-        <div class="card profile-card"><span class="profile-pic-container"><div class="profile-pic"><img data-src="holder.js/100x100" alt="Christopher Salam" src="https://christophersalam.com/screenshots/data.png" itemprop="image" class="media-object img-circle center-block"/></div><div class="name-and-profession text-center"><h3 itemprop="name"><b>Christopher Salam</b></h3><h5 itemprop="jobTitle" class="text-muted">Sr. Software Engineer (Tech Lead) or Engineering Manager Roles</h5></div></span>
+        <div class="card profile-card"><span class="profile-pic-container"><div class="profile-pic"><img data-src="holder.js/100x100" alt="Christopher Salam" src="https://christophersalam.com/images/screenshots/data.png" itemprop="image" class="media-object img-circle center-block"/></div><div class="name-and-profession text-center"><h3 itemprop="name"><b>Christopher Salam</b></h3><h5 itemprop="jobTitle" class="text-muted">Sr. Software Engineer (Tech Lead) or Engineering Manager Roles</h5></div></span>
           <hr/>
           <div class="contact-details clearfix">
             <div class="detail"><span class="icon"><i class="icon fs-lg icon-location"></i></span><span class="info">Berkeley, California</span></div>
             <div class="detail"><span class="icon"><i class="icon fs-lg icon-phone"></i></span><span itemprop="telephone" class="info">(760) 953-2322</span></div>
             <div class="detail"><span class="icon"><i class="icon fs-lg icon-mail"></i></span><span class="info"><a href="mailto:christophersalam@gmail.com" itemprop="email" class="link-disguise">christophersalam@gmail.com</a></span></div>
-            <div class="detail"><span class="icon"><i class="icon fs-lg icon-link"></i></span><span class="info"><a href="https://christophersalam.com" target="_blank">http://christophersalam.com</a></span></div>
+            <div class="detail"><span class="icon"><i class="icon fs-lg icon-link"></i></span><span class="info"><a href="https://christophersalam.com" target="_blank">https://christophersalam.com</a></span></div>
             <div class="detail"><span title="Languages I speak" class="icon"><i class="icon fs-lg icon-language"></i></span><span class="info">English, Spanish</span></div>
           </div>
           <hr/>
@@ -1114,7 +1114,7 @@
               <a href="https://www.linkedin.com/in/christophersalam" target="_blank" data-toggle="tooltip" title="Christopher Salam on Linkedin" class="fs-2x social-link link-linkedin icon-linkedin"></a>
               <a href="https://www.facebook.com/christopher.salam" target="_blank" data-toggle="tooltip" title="Christopher Salam on Facebook" class="fs-2x social-link link-facebook icon-facebook"></a>
               <a href="https://twitter.com/chrisrsalam" target="_blank" data-toggle="tooltip" title="Christopher Salam on Twitter" class="fs-2x social-link link-twitter icon-twitter"></a>
-              <a style="vertical-align: .08em;" href="https://christophersalam.com/ChristopherSalamResumeSeniorSoftwareEngineerFebruary2025.pdf" download="ChristopherSalamResume" title="Christopher Salam, PDF" class="fs-2x social-link link-file icon-file"><img src="https://christophersalam.com/images/pdf.png"></a>
+              <a style="vertical-align: .08em;" href="https://christophersalam.com/ChristopherSalamResumeSeniorSoftwareEngineerMarch2025.pdf" download="ChristopherSalamResume" title="Christopher Salam, PDF" class="fs-2x social-link link-file icon-file"><img src="https://christophersalam.com/images/pdf.png"></a>
             </div>
           </div>
         </div>
@@ -1131,7 +1131,7 @@
                 <div class="card card-nested">
                   <div itemprop="description" class="content mop-wrapper">
                     <p>Berkeley, CA.</p>
-                    <p>Always open to site reliability, backend, devops, or full-stack engineering roles. Open to Engineering Manager roles in specific circumstances.</p>
+                    <p>Engineering management - site reliability, backend, devops, data, or full-stack engineering roles.</p>
                   </div>
                 </div>
               </div>
@@ -1144,8 +1144,16 @@
 
                   <li class="card card-nested clearfix">
                     <div class="content">
+                      <p class="clear-margin relative"><i rel="tooltip" data-placement="left" class="icon-circle current-event"></i><strong>Sr. Software Engineer</strong>,&nbsp;<a href="http://pro.stateaffairs.com" target="_blank">State Affairs</a></p>
+                      <p class="text-muted"><small><span class="space-right">March 2025 - Present</span><span><i class="icon-clock mr-5"></i></span></small></p>
+
+                    </div>
+                  </li>
+
+                  <li class="card card-nested clearfix">
+                    <div class="content">
                       <p class="clear-margin relative"><i rel="tooltip" data-placement="left" class="icon-circle current-event"></i><strong>Sr. Software Engineer (Tech Lead)</strong>,&nbsp;<a href="http://byte.com" target="_blank">Byte</a></p>
-                      <p class="text-muted"><small><span class="space-right">March 2023 - Present</span><span><i class="icon-clock mr-5"></i></span></small></p>
+                      <p class="text-muted"><small><span class="space-right">March 2023 - January 2025</span><span><i class="icon-clock mr-5"></i></span></small></p>
                       <div class="mop-wrapper space-bottom">
                         <p> Integrations (Backend/DevOps/Infra)</p>
                       </div>
