Update to Resume

--- a/resume.html
+++ b/resume.html
@@ -1096,7 +1096,7 @@
         </ul>
       </nav>
       <section class="col-md-3 card-wrapper profile-card-wrapper affix">
-        <div class="card profile-card"><span class="profile-pic-container"><div class="profile-pic"><img data-src="holder.js/100x100" alt="Christopher Salam" src="https://christophersalam.com/images/screenshots/data.png" itemprop="image" class="media-object img-circle center-block"/></div><div class="name-and-profession text-center"><h3 itemprop="name"><b>Christopher Salam</b></h3><h5 itemprop="jobTitle" class="text-muted">Sr. Software Engineer (Tech Lead) or Engineering Manager Roles</h5></div></span>
+        <div class="card profile-card"><span class="profile-pic-container"><div class="profile-pic"><img data-src="holder.js/100x100" alt="Christopher Salam" src="https://christophersalam.com/images/screenshots/data.png" itemprop="image" class="media-object img-circle center-block"/></div><div class="name-and-profession text-center"><h3 itemprop="name"><b>Christopher Salam</b></h3><h5 itemprop="jobTitle" class="text-muted">Software Engineer or Engineering Manager Roles</h5></div></span>
           <hr/>
           <div class="contact-details clearfix">
             <div class="detail"><span class="icon"><i class="icon fs-lg icon-location"></i></span><span class="info">Berkeley, California</span></div>
@@ -1114,7 +1114,7 @@
               <a href="https://www.linkedin.com/in/christophersalam" target="_blank" data-toggle="tooltip" title="Christopher Salam on Linkedin" class="fs-2x social-link link-linkedin icon-linkedin"></a>
               <a href="https://www.facebook.com/christopher.salam" target="_blank" data-toggle="tooltip" title="Christopher Salam on Facebook" class="fs-2x social-link link-facebook icon-facebook"></a>
               <a href="https://twitter.com/chrisrsalam" target="_blank" data-toggle="tooltip" title="Christopher Salam on Twitter" class="fs-2x social-link link-twitter icon-twitter"></a>
-              <a style="vertical-align: .08em;" href="https://christophersalam.com/ChristopherSalamResumeSeniorSoftwareEngineerMarch2025.pdf" download="ChristopherSalamResume" title="Christopher Salam, PDF" class="fs-2x social-link link-file icon-file"><img src="https://christophersalam.com/images/pdf.png"></a>
+              <a style="vertical-align: .08em;" href="https://christophersalam.com/ChristopherSalamResume.pdf" download="ChristopherSalamResume" title="Christopher Salam, PDF" class="fs-2x social-link link-file icon-file"><img src="https://christophersalam.com/images/pdf.png"></a>
             </div>
           </div>
         </div>
@@ -1131,7 +1131,7 @@
                 <div class="card card-nested">
                   <div itemprop="description" class="content mop-wrapper">
                     <p>Berkeley, CA.</p>
-                    <p>Engineering management - site reliability, backend, devops, data, or full-stack engineering roles.</p>
+                    <p>Employed in the Bay Area at Shepherd Insurance as Software Engineer. Open to product/platform or engineering manager roles.</p>
                   </div>
                 </div>
               </div>
@@ -1144,34 +1144,51 @@
 
                   <li class="card card-nested clearfix">
                     <div class="content">
-                      <p class="clear-margin relative"><i rel="tooltip" data-placement="left" class="icon-circle current-event"></i><strong>Sr. Software Engineer</strong>,&nbsp;<a href="http://pro.stateaffairs.com" target="_blank">State Affairs</a></p>
-                      <p class="text-muted"><small><span class="space-right">March 2025 - Present</span><span><i class="icon-clock mr-5"></i></span></small></p>
-
+                      <p class="clear-margin relative"><i rel="tooltip" data-placement="left" class="icon-circle current-event"></i><strong>Software Engineer</strong>,&nbsp;<a href="https://shepherdinsurance.com/" target="_blank">Shepherd Insurance</a></p>
+                      <p class="text-muted"><small><span class="space-right">August 2025 - Present</span><span><i class="icon-clock mr-5"></i></span></small></p>
                     </div>
                   </li>
 
                   <li class="card card-nested clearfix">
                     <div class="content">
-                      <p class="clear-margin relative"><i rel="tooltip" data-placement="left" class="icon-circle current-event"></i><strong>Sr. Software Engineer (Tech Lead)</strong>,&nbsp;<a href="http://byte.com" target="_blank">Byte</a></p>
+                      <p class="clear-margin relative"><i rel="tooltip" data-placement="left" class="icon-circle current-event"></i><strong>Sr. Software Engineer</strong>,&nbsp;<a href="http://pro.stateaffairs.com" target="_blank">State Affairs</a></p>
+                      <p class="text-muted"><small><span class="space-right">March 2025 - July 2025</span><span><i class="icon-clock mr-5"></i></span></small></p>
+                      <div class="mop-wrapper space-bottom">
+                        <p>Data Platform & FullStack</p>
+                      </div>
+                      <ul>
+                        <li class="mop-wrapper">
+                          <p>Maintained & piloted python data platform for gov web crawling apps: Crawl4AI, ModAL, BSoup. Reduced downtime by 30%</p>
+                        </li>
+                        <li class="mop-wrapper">
+                          <p>Maintained frontend TS/NodeJS/NextJS/GraphQL/React app for consumer/admin: addressing pipeline backfill with direct entry</p>
+                        </li>
+                        <li class="mop-wrapper">
+                          <p>Implemented site reliability & CI/CD changes: load balancing, optimization & scaling: AWS, Cloudflare, Dokku, made prod mirror site</p>
+                        </li>
+                      </ul>
+                    </div>
+                  </li>
+
+                  <li class="card card-nested clearfix">
+                    <div class="content">
+                      <p class="clear-margin relative"><i rel="tooltip" data-placement="left" class="icon-circle current-event"></i><strong>Sr. Software Engineer (Team Lead)</strong>,&nbsp;<a href="http://byte.com" target="_blank">Byte</a></p>
                       <p class="text-muted"><small><span class="space-right">March 2023 - January 2025</span><span><i class="icon-clock mr-5"></i></span></small></p>
                       <div class="mop-wrapper space-bottom">
-                        <p> Integrations (Backend/DevOps/Infra)</p>
+                        <p> Integrations - Backend, DevOps, Infrastructure</p>
                       </div>
                       <ul>
                         <li class="mop-wrapper">
                           <p>Leadership: Agile development: kanban standup, roadmap, calibration, retro, jira, confluence</p>
                         </li>
                         <li class="mop-wrapper">
-                          <p>Mentored other engineers, scheduled meetings, started  eng team social & office hours</p>
+                          <p>Led team 3 engineers driving backend, infra, & cloud platform features: Azure, TS/NodeJS, GraphQL, NextJS, Integrations </p>
                         </li>
                         <li class="mop-wrapper">
-                          <p>Supporting build, test, lint, sdk, dependencies & deploy pipeline. BitBucket, Azure, Typescript</p>
+                          <p>Migrated monolith auth & payment to serverless for scalability, deprecation of legacy system, presigned file uploads & spoofing</p>
                         </li>
                         <li class="mop-wrapper">
-                          <p>Developed multistep queued  file transfer process from salesforce storage to azure storage</p>
-                        </li>
-                        <li class="mop-wrapper">
-                          <p>Developed authentication methods with function application development, api migration</p>
+                          <p>Developed multistep queued file transfer processes for storage migration reducing storage costs by 99.6% (Salesforce → Azure)</p>
                         </li>
                       </ul>
                     </div>
@@ -1190,19 +1207,12 @@
                           </p>
                         </li>
                         <li class="mop-wrapper">
-                          <p>Externalized (initially Cloudfront VPN) 20 React apps across Twitter Ads - Scala.  
+                          <p>Migrated VPN auth and related features for React / NodeJS / GraphQL / Java / Scala apps in ads ecosystem, enabling 14 websites  
                           </p>
                         </li>
                         <li class="mop-wrapper">
-                          <p>Maintained React FrontEnd: Ads Portal, Internal Tools,  brand safety emergency
+                          <p>Optimized machine learning ETL pipeline, enhancing performance & reducing cloud costs using spot instances by 20%
                           </p>
-                        </li>
-                        <li class="mop-wrapper">
-                          <p>Managed AWS:Route53/ELB/s3/ec2(standard, spot) for ad serving, data collection
-                          </p>
-                        </li>
-                        <li class="mop-wrapper">
-                          <p>Scripted baSh/Node transfer migrating from AWS:EC2->S3 for improved distribution</p>
                         </li>
                       </ul>
                     </div>
@@ -1217,13 +1227,10 @@
                       </div>
                       <ul>
                         <li class="mop-wrapper">
-                          <p>Architected dev/QA tools: SQL, Redis, Bash, Node, PHP, Jenkins.  4000+ ad viewer / library</p>
+                          <p>Developed tools & workflows solving ad versioning & builds for ads customers reducing build times from 1 day to 15 minutes</p>
                         </li>
                         <li class="mop-wrapper">
-                          <p>Resolved capacity issues and  memory issues in ad data pipeline, Improved ETL pipeline</p>
-                        </li>
-                        <li class="mop-wrapper">
-                          <p>Coordinated automated infrastructure & build pipeline for ad library 13 partner integrations</p>
+                          <p>Managed AWS infrastructure (Route53, ELB, S3, EC2) for ads, sites for B2C & B2B customers, providing 100% availability</p>
                         </li>
                         </li>
                       </ul>
@@ -1239,10 +1246,7 @@
                       </div>
                       <ul>
                         <li class="mop-wrapper">
-                          <p>Migrated iOS (UIWebView to WKWebView), eCommerce platforms  API integration</p>
-                        </li>
-                        <li class="mop-wrapper">
-                          <p>Custom API Accessed contacts & other mobile features via Cordova in iOS/Android SDKs</p>
+                          <p>Led Shopify API integration, mobile bridge and backend system development for OCR technology platform MEAN / NodeJs</p>
                         </li>
                       </ul>
                     </div>
@@ -1255,14 +1259,6 @@
                       <div class="mop-wrapper space-bottom">
                         <p>Various e-commerce clients (Ruby, Javascript, Python)</p>
                       </div>
-                      <ul>
-                        <li class="mop-wrapper">
-                          <p>Continue to consult and work on bugsfixes for on-going commerce and single-page applications</p>
-                        </li>
-                        <li class="mop-wrapper">
-                          <p>Worked with designer and other developers remotely and developed project management skills</p>
-                        </li>
-                      </ul>
                     </div>
                   </li>
                   <li class="card card-nested clearfix">
@@ -1272,14 +1268,6 @@
                       <div class="mop-wrapper space-bottom">
                         <p>Biogas Production, Filtration</p>
                       </div>
-                      <ul>
-                        <li class="mop-wrapper">
-                          <p>Managed on-site construction of anaerobic digesters, oversaw team (4) laborers/electricians</p>
-                        </li>
-                        <li class="mop-wrapper">
-                          <p>Developed prototype hybrid gas upgrader with $1M budget over five projects as technical lead.</p>
-                        </li>
-                      </ul>
                     </div>
                   </li>
                   <li class="card card-nested clearfix">
@@ -1299,8 +1287,8 @@
                   <ul class="list-unstyled clear-margin">
                     <li class="card card-nested card-skills">
                       <div class="skill-info"><strong>Full Stack</strong>
-                        <div class="space-top labels"><span class="label label-keyword">Typescript</span><span class="label label-keyword">Node</span><span class="label label-keyword">Express</span><span class="label label-keyword">React</span>
-                          <span class="label label-keyword">Python</span><span class="label label-keyword">iOS - Swift</span><span class="label label-keyword">Ember</span><span class="label label-keyword">Backbone</span>
+                        <div class="space-top labels"><span class="label label-keyword">Typescript</span><span class="label label-keyword">Python</span><span class="label label-keyword">Node</span><span class="label label-keyword">Express</span><span class="label label-keyword">React</span>
+                          <span class="label label-keyword">iOS - Swift</span><span class="label label-keyword">Ember</span><span class="label label-keyword">Backbone</span>
                           <span class="label label-keyword">SEO</span><span class="label label-keyword">CSS</span><span class="label label-keyword">Selenium</span><span class="label label-keyword">Nightmare</span><span class="label label-keyword">ReactTestingLibrary</span><span class="label label-keyword">RegExp</span>
                         </div>
                       </div>
